--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "vue-mini",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "vue.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "webpack": "^4.28.3"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.1.2"
+  }
 }
